syntax = "proto3";

option go_package = "/service";

package service;

message SendRequest {
  string mobile = 1;
}

message RegisterRequest {
  string mobile = 1;
  string password = 2;
  string ConfirmPwd = 3;
  string Code = 4;
}

message LoginRequest {
  string mobile = 1;
  string password = 2;
}

message Response {
  int32 code = 1;
  string info = 2;
}

service UserService {
  rpc Send(SendRequest) returns (Response);
  rpc Register(RegisterRequest) returns (Response);
  rpc Login(LoginRequest) returns (Response);
}